EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==06/19/2009==
cavedude (nilbog): Added many missing pet names.

==06/18/2009==
KLS: NPCs will no longer warp to their very first waypoint if they start on a grid, make sure they're spawned near their first waypoint!
KLS: Added quest::SetRunning(value) (1 for run, 0 for walk) to let a NPC run when out of combat instead of walk.
KLS: Added quest::IsRunning() return 0 for walk, 1 for run to let quest know if the npc is walking or running.

==06/18/2009==
Derision: Fixed some flawed database queries and a few compile warnings.
Derision: Added command #reloadtitles to reload titles from the database.
Derision: Added second optional argument to #title and #titlesuffix to save the title to the database if 1.
Derision: Added second optional argument to $client->SetAATitle/SetTitleSuffix to save the title to the database.
realityincarnate: Monster Summoning pets should work properly now.

==06/17/2009==
Derision: Removed redundant flymode on/off in water code (not needed since Rev161).
Trevius: New fields added to the alt_vars table to allow SoF and Titanium to both use it.
KLS: Aggro tweaks + melee spell procs wont proc off ranged attacks anymore.

Required SQL: /utils/sql/svn/687_aa_table_changes.sql

==06/16/2009==
Derision: Old corpses summoned by Expedient Recovery will no longer rebury after 5 seconds.
Derision: Added optional duration parameter to quest::popup.
Trevius: SoF - Adventure Merchant Selling is now functional.
Trevius: SoF - Items with click effects now show the min level required to click them.
Trevius: SoF - Items being sold now show the correct price that the merchant will pay for them.
cavedude: Changed the items-0.6.0-DR2-0.6.1-DR1-convert.sql error message to stop confusing people.
cavedude: Green con KOS NPCs will now aggro clients while sitting.
Derision: Spells Gems now stay greyed out after zoning until their recast time is met.